updated grunt configuration

--- a/grunt-js-build/index.html
+++ b/grunt-js-build/index.html
@@ -1,7 +1,7 @@
 <doctype html>
 <html>
     <head>
-        <title>Part 4 - Computed Properties / Observer</title>
+        <title>GRUNT.JS - BUILD</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="bower_components/bootstrap/dist/css/bootstrap.css" rel="stylesheet" type="text/css">
@@ -17,7 +17,7 @@
     <script src="bower_components/handlebars/handlebars.js"></script>
     <script src="bower_components/ember/ember.js"></script>
     <script src="templates.js"></script>
-    <script src="app-concat.js"></script>
+    <script src="app-build.js"></script>
    
     </body>
 </html>
